# AirFusion_AI

./: .env.example  .gitignore  README.md  README.zh-Hant.md  pyproject.toml  啟動Server  整合多維度數據進行空氣品質分析.txt
app/: __init__.py  cli.py  domain.py  main.py  serial_bridge.py  simulate_sensor.py
app/api/: routes.py
app/core/: config.py  geo.py  thresholds.py
app/providers/: airbox.py  cwa.py  moenv.py  mqtt_ingest.py
app/schemas/: air_quality.py
app/services/: advisor.py  fusion.py  prompting.py
app/web/: index.html
app/web/static/: app.js  styles.css
docs/: architecture.md  file_guide.md
firmware/arduino_uno_serial/: README.md
firmware/arduino_uno_serial/AirFusionUnoSerial/: AirFusionUnoSerial.ino
firmware/esp32_micropython/: main.py  secrets.example.py
tests/: test_advisor.py  test_airbox_provider.py  test_cwa_provider.py  test_frontend_static.py  test_fusion.py  test_geo.py  test_moenv_provider.py
